content/_generated-doc/2.7/config/quarkus-grpc-config-grpc-configuration.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients-configures-the-grpc-clients]]link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients-configures-the-grpc-clients[Configures the gRPC clients]

h|Type
h|Default

a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.port]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.port[quarkus.grpc.clients."client-name".port]`

[.description]
--
The gRPC service port.
--|int 
|`9000`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.host]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.host[quarkus.grpc.clients."client-name".host]`

[.description]
--
The host name / IP on which the service is exposed.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.ssl.certificate]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.ssl.certificate[quarkus.grpc.clients."client-name".ssl.certificate]`

[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.
--|path 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.ssl.key]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.ssl.key[quarkus.grpc.clients."client-name".ssl.key]`

[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.
--|path 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.ssl.trust-store]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.ssl.trust-store[quarkus.grpc.clients."client-name".ssl.trust-store]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust The trust store can be either on classpath or in an external file.
--|path 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.name-resolver]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.name-resolver[quarkus.grpc.clients."client-name".name-resolver]`

[.description]
--
Use a name resolver. Defaults to dns. If set to "stork", host will be treated as SmallRye Stork service name
--|string 
|`dns`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.plain-text]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.plain-text[quarkus.grpc.clients."client-name".plain-text]`

[.description]
--
Whether `plain-text` should be used instead of `TLS`. Enables by default, except it TLS/SSL is configured. In this case, `plain-text` is disabled.
--|boolean 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.keep-alive-time]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.keep-alive-time[quarkus.grpc.clients."client-name".keep-alive-time]`

[.description]
--
The duration after which a keep alive ping is sent.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.flow-control-window]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.flow-control-window[quarkus.grpc.clients."client-name".flow-control-window]`

[.description]
--
The flow control window in bytes. Default is 1MiB.
--|int 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.idle-timeout]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.idle-timeout[quarkus.grpc.clients."client-name".idle-timeout]`

[.description]
--
The duration without ongoing RPCs before going to idle mode.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.keep-alive-timeout]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.keep-alive-timeout[quarkus.grpc.clients."client-name".keep-alive-timeout]`

[.description]
--
The amount of time the sender of of a keep alive ping waits for an acknowledgement.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.keep-alive-without-calls]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.keep-alive-without-calls[quarkus.grpc.clients."client-name".keep-alive-without-calls]`

[.description]
--
Whether keep-alive will be performed when there are no outstanding RPC on a connection.
--|boolean 
|`false`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-hedged-attempts]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-hedged-attempts[quarkus.grpc.clients."client-name".max-hedged-attempts]`

[.description]
--
The max number of hedged attempts.
--|int 
|`5`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-retry-attempts]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-retry-attempts[quarkus.grpc.clients."client-name".max-retry-attempts]`

[.description]
--
The max number of retry attempts. Retry must be explicitly enabled.
--|int 
|`5`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-trace-events]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-trace-events[quarkus.grpc.clients."client-name".max-trace-events]`

[.description]
--
The maximum number of channel trace events to keep in the tracer for each channel or sub-channel.
--|int 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-inbound-message-size]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-inbound-message-size[quarkus.grpc.clients."client-name".max-inbound-message-size]`

[.description]
--
The maximum message size allowed for a single gRPC frame (in bytes). Default is 4 MiB.
--|int 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-inbound-metadata-size]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.max-inbound-metadata-size[quarkus.grpc.clients."client-name".max-inbound-metadata-size]`

[.description]
--
The maximum size of metadata allowed to be received (in bytes). Default is 8192B.
--|int 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.negotiation-type]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.negotiation-type[quarkus.grpc.clients."client-name".negotiation-type]`

[.description]
--
The negotiation type for the HTTP/2 connection. Accepted values are: `TLS`, `PLAINTEXT_UPGRADE`, `PLAINTEXT`
--|string 
|`TLS`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.override-authority]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.override-authority[quarkus.grpc.clients."client-name".override-authority]`

[.description]
--
Overrides the authority used with TLS and HTTP virtual hosting.
--|string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.per-rpc-buffer-limit]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.per-rpc-buffer-limit[quarkus.grpc.clients."client-name".per-rpc-buffer-limit]`

[.description]
--
The per RPC buffer limit in bytes used for retry.
--|long 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.retry]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.retry[quarkus.grpc.clients."client-name".retry]`

[.description]
--
Whether retry is enabled. Note that retry is disabled by default.
--|boolean 
|`false`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.retry-buffer-size]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.retry-buffer-size[quarkus.grpc.clients."client-name".retry-buffer-size]`

[.description]
--
The retry buffer size in bytes.
--|long 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.user-agent]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.user-agent[quarkus.grpc.clients."client-name".user-agent]`

[.description]
--
Use a custom user-agent.
--|string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.load-balancing-policy]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.load-balancing-policy[quarkus.grpc.clients."client-name".load-balancing-policy]`

[.description]
--
Use a custom load balancing policy. Accepted values are: `pick_value`, `round_robin`, `grpclb` This value is ignored if name-resolver is set to 'stork'
--|string 
|`pick_first`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.compression]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.compression[quarkus.grpc.clients."client-name".compression]`

[.description]
--
The compression to use for each call. The accepted values are `gzip` and `identity`.
--|string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.deadline]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.clients.-client-name-.deadline[quarkus.grpc.clients."client-name".deadline]`

[.description]
--
The deadline used for each call. 
 The format uses the standard `java.time.Duration` format. You can also provide duration values starting with a number. In this case, if the value consists only of a number, the converter treats the value as seconds. Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


h|[[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server-configure-the-grpc-server]]link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server-configure-the-grpc-server[Configure the gRPC server]

h|Type
h|Default

a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.port]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.port[quarkus.grpc.server.port]`

[.description]
--
The gRPC Server port.
--|int 
|`9000`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.test-port]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.test-port[quarkus.grpc.server.test-port]`

[.description]
--
The gRPC Server port used for tests.
--|int 
|`9001`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.host]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.host[quarkus.grpc.server.host]`

[.description]
--
The gRPC server host.
--|string 
|`0.0.0.0`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.handshake-timeout]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.handshake-timeout[quarkus.grpc.server.handshake-timeout]`

[.description]
--
The gRPC handshake timeout.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.max-inbound-message-size]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.max-inbound-message-size[quarkus.grpc.server.max-inbound-message-size]`

[.description]
--
The max inbound message size in bytes.
--|int 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.max-inbound-metadata-size]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.max-inbound-metadata-size[quarkus.grpc.server.max-inbound-metadata-size]`

[.description]
--
The max inbound metadata size in bytes
--|int 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.certificate]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.certificate[quarkus.grpc.server.ssl.certificate]`

[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.
--|path 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.key]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.key[quarkus.grpc.server.ssl.key]`

[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.
--|path 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.key-store]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.key-store[quarkus.grpc.server.ssl.key-store]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files. The key store can be either on classpath or an external file.
--|path 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.key-store-type]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.key-store-type[quarkus.grpc.server.ssl.key-store-type]`

[.description]
--
An optional parameter to specify the type of the key store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.key-store-password]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.key-store-password[quarkus.grpc.server.ssl.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.trust-store]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.trust-store[quarkus.grpc.server.ssl.trust-store]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust The trust store can be either on classpath or an external file.
--|path 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.trust-store-type]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.trust-store-type[quarkus.grpc.server.ssl.trust-store-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.trust-store-password]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.trust-store-password[quarkus.grpc.server.ssl.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.
--|string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.cipher-suites]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.cipher-suites[quarkus.grpc.server.ssl.cipher-suites]`

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.
--|list of string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.protocols]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.protocols[quarkus.grpc.server.ssl.protocols]`

[.description]
--
The list of protocols to explicitly enable.
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.client-auth]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.ssl.client-auth[quarkus.grpc.server.ssl.client-auth]`

[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED
--|`none`, `request`, `required` 
|`none`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.plain-text]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.plain-text[quarkus.grpc.server.plain-text]`

[.description]
--
Disables SSL, and uses plain text instead. If disabled, configure the ssl configuration.
--|boolean 
|`true`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.alpn]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.alpn[quarkus.grpc.server.alpn]`

[.description]
--
Whether ALPN should be used.
--|boolean 
|`true`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.transport-security.certificate]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.transport-security.certificate[quarkus.grpc.server.transport-security.certificate]`

[.description]
--
The path to the certificate file.
--|string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.transport-security.key]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.transport-security.key[quarkus.grpc.server.transport-security.key]`

[.description]
--
The path to the private key file.
--|string 
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.enable-reflection-service]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.enable-reflection-service[quarkus.grpc.server.enable-reflection-service]`

[.description]
--
Enables the gRPC Reflection Service. By default, the reflection service is only exposed in `dev` mode. This setting allows overriding this choice and enable the reflection service every time.
--|boolean 
|`false`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.instances]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.instances[quarkus.grpc.server.instances]`

[.description]
--
Number of gRPC server verticle instances. This is useful for scaling easily across multiple cores. The number should not exceed the amount of event loops.
--|int 
|`1`


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.netty.keep-alive-time]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.netty.keep-alive-time[quarkus.grpc.server.netty.keep-alive-time]`

[.description]
--
Sets a custom keep-alive duration. This configures the time before sending a `keepalive` ping when there is no read activity.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.compression]]`link:#quarkus-grpc-config-grpc-configuration_quarkus.grpc.server.compression[quarkus.grpc.server.compression]`

[.description]
--
gRPC compression, e.g. "gzip"
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
